# monzo_decision_scientist

./: Monzo_Take_Home_Test_Decision_Scientist_Rafael_Garcia_Dias.ipynb  README.md  pyproject.toml  run_all.sh
data/clean/: application_dtypes.csv  monthly_outcome_dtypes.csv
data/processed/: application_dtypes_with_is_bad_3m.csv
data/reports/: application_view.html  monthly_outcome_view.html
monzo_decision_scientist/: definitions.py
monzo_decision_scientist/data/: create_is_bad_3m.py  exploratory_analysis.py  risk.py
monzo_decision_scientist/metrics/: accuracies.py  accuracies_monitoring.py  calibrate_score.py  gini_coef.py  stress_analysis.py
tests/: test_exploratory_analysis.py  test_metrics.py  test_monzo_decision_scientist.py  test_risk.py
