[tool.poetry]
name = "monzo_decision_scientist"
version = "0.1.0"
description = ""
authors = ["Rafael Dias <rafaelagd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.3.4"
sweetviz = "^2.1.3"
sklearn = "^0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
